plugins {
    id 'java'
    id 'maven-publish'
    id 'signing'
}

group = 'com.felipestanzani'
version = providers.gradleProperty('version').getOrElse('0.1.2')
description = 'Token-Oriented Object Notation (TOON) - A compact, human-readable format for LLM contexts'

// Apply external Gradle scripts
apply from: 'gradle/publishing.gradle'
apply from: 'gradle/verification.gradle'

java {
    // Only enforce toolchain in CI to ensure consistent Java 17 builds
    // Locally, use whatever JDK is installed
    if (System.getenv('CI') == 'true') {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }
    withSourcesJar()
    withJavadocJar()
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.1'
    testImplementation platform('org.junit:junit-bom:6.0.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}